thêm check nội dung của tin đăng
